Fixed horizontal scroll

--- a/src/Components/HeroSection/heroSection.module.scss
+++ b/src/Components/HeroSection/heroSection.module.scss
@@ -10,8 +10,6 @@
   height: 100vh;
   height: calc(var(--vh, 1vh) * 100);
 
-  width: 100vw;
-
   overflow: hidden;
 
   background-color: $black;
